File Name: CHANGES

01/23/2017 FASP 1.9.3:
- Clean up Level 4 (Pre) functions.
- Clean up Level 3 (Kry) functions.
- Clean up Level 2 (Itr) functions.
- Clean up Level 1 (Bla) functions.
- Clean up Level x (Xtr) functions.
- Function name change: *_Schwarz* ==> *_schwarz*.
- Change function name of a few private functions in GMG.
- Separate SA/UA AMG for CSR and BSR.
- Separate aggregation for CSR and BSR.
- Function name change: Upper case ==> Lower case in AuxThreads.c.
- Update reference manual and Doxygen.
- Update regression tests and results again.
- Update VS10 and test in Windows.

01/21/2017 FASP 1.9.2:
- Change filenames according to package structure.
- Change filenames of interface to external packages.
- Change filenames of FEM and FDM tests.
- Add file dependency in each file.
- Add description for the new structure in Doxygen.
- Slightly change names of GMG solvers.
- Change structure for "matrix-free" solvers.
- Remove calls to old ilu.f from FASP.
- Fix warnings in Doxygen.
- Move some of the definitions from fasp.h to fasp_grid.h and PreAMGUtil.inl.
- Clean up Level 5 (Sol) functions.
- Update regression results. 

01/15/2017 FASP 1.9.1:
- Prepare to change the structure of faspsolver.
- Merge *_mf.c files with corresponding Krylov methods.
- Move quadrature.c to test/src.
- File name change: auxiliary.c ==> auxiliary.inl.

01/15/2017 FASP 1.9.0:
- Separate data structures and routines for reservoir simulation from base.
- Change block_iCSRmat to iBLCmat and corresponding functions.
- Delete some deprecated functions.
- Fix a bug in interpolation.c: reported by Liu Hui.
- Remove ilu.f from SparseKit.
- Clean up GMG code.
- Fix a typo: _sympat ==> _sympart.
- File name change: _block.c ==> _blc.c. 

01/10/2017 FASP 1.8.9:
- Fix some memory leaks in AMG setup routines while early termination.
- Fix some warnings in PVBiCGstab.
- Fix some warnings in ILU.

12/30/2016 FASP 1.8.8:
- Update docomentation and webpage. 