@@ -1,5 +1,10 @@
 File Name: CHANGES
 
+01/24/2017 FASP 1.9.4:
+- Fix a few memory leaks.
+- Update input parameters in test/ini/input.dat.
+- Remove fasp_dcsr_check().
+
 01/23/2017 FASP 1.9.3:
 - Clean up Level 4 (Pre) functions.
 - Clean up Level 3 (Kry) functions.
